- Fix screen heights & overflow issues - Update Menu Enum names

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,7 +5,10 @@ html {
 }
 
 .fullHeight {
-  height: 100%;
+  height: 100vh;
+}
+.overflowY {
+  overflow-y: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
